# FeedWise

./: .env.example  .gitignore  README.md  architect.md  docker-compose.yml  pyproject.toml
THEMES/THEME-FEAT-fetcher-progress-feedback/: 00-theme.md  01-research.md  02-design.md  03-plan.md  04-execute.md  99-done.md
data/: .gitkeep
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ArticleCard.tsx  FailedItemsModal.tsx  Layout.tsx  ProcessPanel.tsx  Sidebar.tsx  TaskCard.tsx
frontend/src/hooks/: useProcessWebSocket.ts
frontend/src/pages/: ArticlePage.tsx  FeedStatsPage.tsx  HomePage.tsx  SettingsPage.tsx
src/feedwise/: __init__.py  config.py  main.py
src/feedwise/api/: __init__.py  analysis.py  articles.py  feeds.py  fetch.py  process.py  settings.py  sync.py
src/feedwise/core/: __init__.py  fetch_runner.py  freshrss.py  processor.py  ranking.py  sync.py
src/feedwise/fetcher/: __init__.py  detector.py  extractor.py
src/feedwise/llm/: __init__.py  analyzer.py  base.py  factory.py  ollama.py  openai.py
src/feedwise/models/: __init__.py  analysis.py  app_settings.py  article.py  database.py  feed.py  settings.py  sync.py
src/feedwise/scheduler/: __init__.py  tasks.py
src/feedwise/utils/: __init__.py  html_parser.py
tests/: __init__.py  conftest.py  test_deep_summary.py  test_e2e_process.py  test_process_api.py  test_processor_engine.py  test_processor_stats.py
